<resources>
    <string name="app_name">Маршруты ГАИ</string>
    <string name="rate_app">Оценить приложение</string>
    <string name="by_author">от &lt;b>the dumbest apps&lt;/b></string>
    <string name="author_email">thedumbestapps@gmail.com</string>
    <string name="last_update">Последнее обновление: %s</string>

    <string name="menu_map">Источник карт</string>
    <string name="menu_route">Маршрут</string>
    <string name="menu_follow_me">Следить</string>
    <string name="menu_clean_map">Очистить карту</string>
    <string name="menu_about">Об авторах</string>

    <string name="dialog_title_map_source">Источник карт</string>
    <string name="dialog_title_about">Об авторах</string>
    <string name="dialog_title_routes">Маршруты</string>
    <string name="dialog_button_update">Обновить</string>

    <string name="toast_cant_update_routes">Ошибка при обновлении. Проверьте подключение к сети Интернет</string>
    <string name="toast_route_broken">Невозможно отобразить маршрут %s</string>
</resources>
