<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/menu_follow_me"
          android:title="@string/menu_follow_me"
          android:icon="@drawable/vector_unfollow"
          android:orderInCategory="80"
          app:showAsAction="always"/>
    <item android:id="@+id/menu_route"
          android:title="@string/menu_route"
          android:icon="@drawable/vector_routes"
          android:orderInCategory="90"
          app:showAsAction="always|withText"/>
    <item android:id="@+id/menu_map"
          android:title="@string/menu_map"
          android:icon="@drawable/vector_map_source"
          android:orderInCategory="100"
          app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_clean_map"
          android:title="@string/menu_clean_map"
          android:orderInCategory="109"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_about"
          android:title="@string/menu_about"
          android:orderInCategory="110"
          app:showAsAction="never" />
</menu>
