<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="dialogAboutController" type="com.tda.gairoutes.ui.dialog.DialogManager"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/vertical_margin_average"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/horizontal_margin"/>
        <TextView
            android:id="@+id/tv_last_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_small"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/horizontal_margin"/>
        <Button
            android:id="@+id/b_rate_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_app"
            android:onClick="@{dialogAboutController.onRateAppClick}"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_gravity="center"/>
        <LinearLayout
            android:id="@+id/rl_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/vertical_margin_small"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:onClick="@{dialogAboutController.onAuthorClick}">
            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_author"/>
            <TextView
                android:id="@+id/tv_author_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_email"
                android:textStyle=""/>
        </LinearLayout>
    </LinearLayout>
</layout>